Box selection - Edit mode - Header not updated #41995

Closed
opened 2014-09-28 22:04:00 +02:00 by Julien Duroure · 6 comments
Member

System Information
Ubuntu 14.04

Blender Version
Broken: (current git - 640af5c)

Short description of error
Header is not updated after box selection of bone head or tail

Exact steps for others to reproduce the error

  • Create an armature. Enter Edit mode on it.
  • B for box selection
  • Select bone ( or only tail or header -same result). Header is not updated ( Verts & Bones counts)
  • Works if you use RMB or Circle selection

Don't hesitate to contact me if you want more information.

**System Information** Ubuntu 14.04 **Blender Version** Broken: (current git - 640af5c) **Short description of error** Header is not updated after box selection of bone head or tail **Exact steps for others to reproduce the error** - Create an armature. Enter Edit mode on it. - B for box selection - Select bone ( or only tail or header -same result). Header is not updated ( Verts & Bones counts) - Works if you use RMB or Circle selection Don't hesitate to contact me if you want more information.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure

This issue was referenced by 101a1dddae

This issue was referenced by 101a1dddae1680fde2e7b22235a9ea34a16269b9
Bastien Montagne self-assigned this 2014-09-28 23:47:31 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 101a1dddae.

Closed by commit 101a1dddae.

This issue was referenced by f9c602f1be

This issue was referenced by f9c602f1beea6440bb6c49bfa225eab3d012ee4f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41995
No description provided.