Fix T41995: Box selection - Edit mode - Header not updated.